k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crud-springboot
  name: crud-springboot-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: crud-springboot
  type: LoadBalancer
