k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: crud-springboot-ingress
spec:
  rules:
    - http:
        paths:
          - path: /v1/people/*
            backend:
              serviceName: crud-springboot-service
              servicePort: 8080
